crates/swc_ecma_parser/tests/test262-error-references/fail/1395e3a9d2acf65c.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/1395e3a9d2acf65c.js:1:2
  |
1 | `\07`
  |  ^^

